--- a/cw1_html.html
+++ b/cw1_html.html
@@ -1,1 +1,7 @@
-<script src="cw1_js.js"></script>
+<html>
+    <meta charset="utf-8">
+  <head>
+<script src="cw1_a3.js"></script>
+  </head>
+  <body></body>
+ </html> 
